Fixes link color within notices so it’s now visible.
Always nice.

--- a/_sass/minimal-mistakes/_notices.scss
+++ b/_sass/minimal-mistakes/_notices.scss
@@ -44,7 +44,7 @@
   }
 
   a {
-    color: $notice-color;
+//    color: $notice-color;
 
     &:hover {
       color: mix(#000, $notice-color, 40%);
